src/objects/AP_Hangar__c.object
<CustomObject>
    <fields>
        <fullName>Airplanes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Hangars</relationshipLabel>
        <relationshipName>Hangars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Hangar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hangar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hangars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>